k8s/log.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log
  labels:
    app: log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log
  template:
    metadata:
      labels:
        app: log
    spec:
      containers:
      - name: log
        image: filedepot-log:local
        ports:
        - containerPort: 8003
        readinessProbe:
          httpGet:
            path: /ping
            port: 8003
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /ping
            port: 8003
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: log
spec:
  selector:
    app: log
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
