k8s/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: filedepot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: filedepot.local
    http:
      paths:
      - path: /gateway(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8000
      - path: /data(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8000
      - path: /file(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8000
      - path: /log(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8000
